turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: ':' expected but ')' found.
def setCouleur(c) {
                ^LangtonsAnt:28: error: identifier expected but '}' found.
}
^